--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <allure.testng>2.7.0</allure.testng>
+        <allure.maven>2.9</allure.maven>
     </properties>
 
     <dependencies>
@@ -21,6 +23,13 @@
             <groupId>com.epam.jdi</groupId>
             <artifactId>jdi-light</artifactId>
             <version>RELEASE</version>
+        </dependency>
+
+        <!--Allure config in parent-->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>${allure.testng}</version>
         </dependency>
 
         <dependency>
@@ -48,7 +57,6 @@
                     <target>${java.version}</target>
                 </configuration>
             </plugin>
-            <!--Allure reporting config in parent-->
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -60,8 +68,36 @@
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
+
+            <!--Allure reporting config in parent-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${allure.maven}</version>
+            </plugin>
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>${allure.maven}</version>
+                <configuration>
+                    <properties>
+                        <allure.results.directory>allure-results</allure.results.directory>
+                    </properties>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
+
+    <!-- Allure reporting config in parent-->
+    <reporting>
+        <excludeDefaults>true</excludeDefaults>
+        <plugins>
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+            </plugin>
+        </plugins>
+    </reporting>
     
 </project>
